# expense-report-creator

./: .gitignore  .pre-commit-config.yaml  LICENSE  NDF_Generator.bat  NDF_Generator.sh  README.md  flake.nix  pyproject.toml
.system/: requirements.txt
.system/assets/: export-report-template.tex
.system/src/expense-report-creator/: main.py
.system/src/expense_report_creator/: main.py
A_MODIFIER/: data.xlsx
assets/: data.xlsx  export-report-template.tex
assets/templates/: main.tex
src/expense-report-creator/: main.py
src/expense_report_creator/: main.py
