[project]
name = "expense-report-creator"
version = "1.0.0"
description = "Créateur de notes de frais pour trésorier d'association."
authors = [
    {name = "Ben",email = "jarvis.edith85@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]

[tool.poetry]
packages = [{include = "expense_report_creator", from = "src"}]

[tool.isort]
profile = "black"

[tool.flake8]
# On ignore les erreurs qui sont en conflit direct avec le style de Black
extend-ignore = [
    "E203",  # Espace avant ':' (Black le fait parfois pour les slices)
    "E501"   # Longueur max black=88 vs flake8=79, on ignore l'erreur de longeur
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)"
]
